--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abigahil Cedillo</title>
+    <title>Abigahil Wallace</title>
     <style>
         body {
             min-height: 100vh;
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <h1>Abigahil Cedillo</h1>
+    <h1>Abigahil Wallace</h1>
 </body>
 </html>
