--- a/index.html
+++ b/index.html
@@ -5,24 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abigahil Wallace</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
+    <script defer src="./main.js"></script>
     <style>
-        body {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: centers;
-            justify-content: center;
-            align-items: center;
-            background-image: radial-gradient(circle at 47% 14%, rgba(205, 205, 205,0.04) 0%, rgba(205, 205, 205,0.04) 43%,transparent 43%, transparent 100%),radial-gradient(circle at 35% 12%, rgba(215, 215, 215,0.04) 0%, rgba(215, 215, 215,0.04) 4%,transparent 4%, transparent 100%),radial-gradient(circle at 1% 35%, rgba(24, 24, 24,0.04) 0%, rgba(24, 24, 24,0.04) 37%,transparent 37%, transparent 100%),radial-gradient(circle at 21% 1%, rgba(0, 0, 0,0.04) 0%, rgba(0, 0, 0,0.04) 26%,transparent 26%, transparent 100%),radial-gradient(circle at 23% 82%, rgba(249, 249, 249,0.04) 0%, rgba(249, 249, 249,0.04) 60%,transparent 60%, transparent 100%),radial-gradient(circle at 11% 54%, rgba(251, 251, 251,0.04) 0%, rgba(251, 251, 251,0.04) 23%,transparent 23%, transparent 100%),radial-gradient(circle at 69% 68%, rgba(234, 234, 234,0.04) 0%, rgba(234, 234, 234,0.04) 10%,transparent 10%, transparent 100%),linear-gradient(90deg, rgb(228, 46, 222),rgb(63, 61, 215));
+        .dancing-script {
+            font-family: 'Dancing Script', cursive;
         }
-        h1 {
-            font-size: 8vw;
-            color: white;
+
+        .wiggle {
+            animation: wiggle 0.3s infinite;
+        }
+
+        @keyframes wiggle {
+            0% { transform: rotate(0deg); }
+            25% { transform: rotate(2deg); }
+            50% { transform: rotate(0deg); }
+            75% { transform: rotate(-2deg); }
+            100% { transform: rotate(0deg); }
+        }
+
+        canvas {
+            position: absolute;
+            inset: 0;
+            pointer-events: none;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
-<body>
-    <h1>Abigahil Wallace</h1>
-    <h4>Moving to Cali bitches!</h4>
+<body class="bg-gradient-to-b to-violet-500 from-pink-500 h-screen flex justify-center items-center">
+    <div id="bounding-box" class="outline outline-white rounded p-12 bg-gray-200/30">
+        <h1 class="dancing-script text-5xl mb-12">Will you be my Valentine?</h1>
+        <div class="flex justify-center px-4 gap-8">
+            <button id="yes" class="dancing-script text-xl text-bold bg-rose-600 px-8 py-2 rounded-xl text-white disabled:bg-rose-900 disabled:text-gray-400">Yes</button>
+            <button id="no" class="underline">No</button>
+        </div>
+    </div>
 </body>
 </html>
