--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </style>
 </head>
 <body class="bg-gradient-to-b to-violet-500 from-pink-500 h-screen flex justify-center items-center">
-    <div id="bounding-box" class="outline outline-white rounded p-12 bg-gray-200/30">
-        <h1 class="dancing-script text-5xl mb-12">Will you be my Valentine?</h1>
+    <div id="bounding-box" class="outline outline-white rounded mx-4 p-4 sm:p-12 bg-gray-200/30">
+        <h1 class="dancing-script text-5xl mb-12 text-center">Will you be my Valentine?</h1>
         <div class="flex justify-center px-4 gap-8">
-            <button id="yes" class="dancing-script text-xl text-bold bg-rose-600 px-8 py-2 rounded-xl text-white disabled:bg-rose-900 disabled:text-gray-400">Yes</button>
+            <button id="yes" class="dancing-script text-xl text-bold bg-rose-600 px-8 py-2 rounded-xl text-white disabled:bg-rose-900 disabled:text-gray-400 hover:bg-rose-500 transition-all duration-300">Yes</button>
             <button id="no" class="underline">No</button>
         </div>
     </div>
